@@ -15,6 +15,7 @@ CHANGE: Core  | Added option to allow the removal of files linked outside the sa
 CHANGE: UI    | Provide column menu option to disable fast renaming in files view [The 8472]
 
 BUGFIX: Core  | Made change so that plugins could not inadvertently turn off Azureus extension protocol [amc1]
+BUGFIX: Core  | The UDP tracker client option has been nonfunctional for quite a while now -> fixed [The 8472]
 
 
 2008.04.10 | Azureus Vuze 3.0.5.2
